<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_blue"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/Main"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/addressContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="1.5in"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">
                    <ImageButton
                        android:id="@+id/btnRefresh"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:background="@drawable/refresh"
                        android:contentDescription="@string/btnRefresh"
                        app:tint="#FFFFFF" />
                </LinearLayout>


                <ImageButton
                    android:id="@+id/btnNotification"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/info"
                    android:contentDescription="@string/btnNext"
                    app:tint="#FFFFFF" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />
                <ImageButton
                    android:id="@+id/btnSetting"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/settings"
                    android:contentDescription="@string/settingImg"
                    app:tint="#FFFFFF" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/btnNext"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/right"
                    android:contentDescription="@string/btnNext"
                    app:tint="#FFFFFF" />


            </LinearLayout>

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTime"
                android:textSize="56sp" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDate"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtAddress"
                android:textAlignment="center"
                android:textSize="48sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/overviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtStatus"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-thin"
                android:text="@string/txtTemp"
                android:textSize="90sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtTemp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtTemp_min" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtTemp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtTemp_max" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#80000000"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/imgSunrise"
                        android:src="@drawable/sunrise"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />

                    <TextView
                        android:id="@+id/txtSunrise1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/imgSunrise"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtSunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtSunrise"
                        android:textSize="14sp" />
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#80000000"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/imgSunset"
                        android:src="@drawable/sunset"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />

                    <TextView
                        android:id="@+id/txtSunset1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/imgSunset"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtSunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtSunset"
                        android:textSize="14sp" />
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#80000000"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/imgWind"
                        android:src="@drawable/wind"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />

                    <TextView
                        android:id="@+id/txtWind1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/imgWind"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtWind"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:background="#80000000"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/imgPressure"
                        android:src="@drawable/pressure"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />

                    <TextView
                        android:id="@+id/txtPressure1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/imgPressure"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtPressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtPressure"
                        android:textSize="14sp" />
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:background="#80000000"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/imgHumidity"
                        android:src="@drawable/humidity"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />

                    <TextView
                        android:id="@+id/txtHumidity1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/imgHumidity"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtHumidity"
                        android:textSize="14sp" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/errorText"
        android:visibility="gone" />


</RelativeLayout>

