<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_blue"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/byCity"
    tools:context=".byCity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/left"
                android:contentDescription="@string/btnBack"
                app:tint="#FFFFFF" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/btnRefresh"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@drawable/refresh"
                android:contentDescription="@string/btnRefresh"
                app:tint="#FFFFFF" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/btnSetting"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/settings"
                android:contentDescription="@string/settingImg"
                app:tint="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/overviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:autofillHints="@string/txtHints"
                android:backgroundTint="@color/black"
                android:ems="15"
                android:hint="@string/txtCityName"
                android:inputType="text"
                android:textColorHint="@color/black" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>


