<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/notificationActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient_blue"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".setNotification">

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnBack1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/left"
                    android:contentDescription="@string/btnBack"
                    app:tint="#FFFFFF" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnSetting1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/settings"
                    android:contentDescription="@string/settingImg"
                    app:tint="#FFFFFF" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">


                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/buttonAlarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnSetNot"
                    />

            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>